syntax="proto3";
package com.tutelary.message.command;
option java_outer_classname = "DashboardCommandResultMessage$$ByJProtobuf";
//
message DashboardCommandResultMessage {  
 DashboardRuntime runtime=1;
repeated GarbageCollector garbageCollectors=2;
repeated ThreadInfo threads=3;
 DashboardMemoryInfo memoryInfo=4;
 int32 jobId=5;
 int32 status=6;
 string message=7;
}
//
message GarbageCollector {  
 string name=1;
 int64 collectionCount=2;
 int64 collectionTime=3;
}
//
message DashboardRuntime {  
 string javaHome=1;
 string javaVersion=2;
 string osName=3;
 string osVersion=4;
 int32 processors=5;
 double systemLoadAverage=6;
 int64 timestamp=7;
 int64 uptime=8;
}
//
message ThreadInfo {  
 int64 id=1;
 string name=2;
 string group=3;
 int32 priority=4;
 string state=5;
 double cpu=6;
 int64 deltaTime=7;
 int64 time=8;
 bool interrupted=9;
 bool daemon=10;
 int64 blockedTime=11;
 int64 blockedCount=12;
 int64 waitedTime=13;
 int64 waitedCount=14;
 string lockName=15;
 int64 lockOwnerName=16;
 bool inNative=17;
 bool suspended=18;
repeated StackTraceElement stackTrace=19;
repeated MonitorInfo lockedMonitors=20;
}
//
message StackTraceElement {  
 string declaringClass=1;
 string methodName=2;
 string fileName=3;
 int32 lineNumber=4;
}
//
message MonitorInfo {  
 int32 stackDepth=1;
 StackTraceElement stackFrame=2;
}
//
message DashboardMemoryInfo {  
repeated MemoryUsage heap=1;
repeated MemoryUsage nonHeap=2;
repeated MemoryUsage bufferPool=3;
}
//
message MemoryUsage {  
 string name=1;
 string type=2;
 int64 init=3;
 int64 used=4;
 int64 committed=5;
 int64 max=6;
 int64 total=7;
}
