syntax="proto3";
//
message JvmMemory {  
 string name=1;
 int64 used=2;
 int64 committed=3;
 int64 max=4;
}
